<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="24dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="24dp">

        <ImageButton
            android:id="@+id/ibCover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_microphone"
            android:clickable="true"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:hint="Fill text"
            android:textStyle="bold"
            android:inputType="text"
            android:maxLines="1"/>

        <Button
            android:id="@+id/ibFavorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/add"
            android:contentDescription="@string/image"
            />
        <!--            android:src="@drawable/ic_favorite"-->

    </LinearLayout>


    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        />


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:max="100"
        android:progress="50"


        android:theme="@style/SeekBarColor"
        android:thumbOffset="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCurrentTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pitchNegative"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/pitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/pitchStart"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/pitchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="3dp"
            android:gravity="start"
            android:text="@string/pitchText"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/pitchPositive"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibShuffle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image"
            android:visibility="visible"
            android:src="@drawable/ic_delete"
            android:clickable="true"/>




<!--        <de.hdodenhof.circleimageview.CircleImageView-->
<!--            android:id="@+id/ibPlay"-->
<!--            app:civ_border_color="@android:color/white"-->
<!--            app:civ_border_width="1dp"-->
<!--            android:layout_width="80dp"-->
<!--            android:layout_height="80dp"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:contentDescription="@string/image"-->
<!--            android:src="@drawable/custom_button" />-->


    </LinearLayout>


</LinearLayout>